# shpxx

./: .clang-format  .clang-tidy  .clang-tidy.include  .cmake-format.json  .cmake-format.yaml  .gitignore  CMakeLists.txt  LICENSE  README.md  README_8md.html  annotated.html  annotated_dup.js  classes.html  classio__handler__test__t.html  classio__handler__test__t__coll__graph.map  classio__handler__test__t__inherit__graph.md5  classshpxx_1_1error__t.html  classshpxx_1_1error__t__coll__graph.map  classshpxx_1_1error__t__coll__graph.md5  classshpxx_1_1error__t__inherit__graph.map  classshpxx_1_1error__t__inherit__graph.md5  classshpxx_1_1feature_1_1linestring__t-members.html  classshpxx_1_1feature_1_1linestring__t.html  classshpxx_1_1feature_1_1linestring__t.js  classshpxx_1_1feature_1_1multi__patch__t-members.html  classshpxx_1_1feature_1_1multi__patch__t.html  classshpxx_1_1feature_1_1multi__patch__t.js  classshpxx_1_1feature_1_1multi__point__t-members.html  classshpxx_1_1feature_1_1multi__point__t.html  classshpxx_1_1feature_1_1multi__point__t.js  classshpxx_1_1feature_1_1point__t-members.html  classshpxx_1_1feature_1_1point__t.html  classshpxx_1_1feature_1_1point__t.js  classshpxx_1_1feature_1_1point__t_a81f1cbde4b4527b2744fbf9089317bc3_cgraph.map  classshpxx_1_1feature_1_1point__t_a81f1cbde4b4527b2744fbf9089317bc3_cgraph.md5  classshpxx_1_1feature_1_1polygon__t-members.html  classshpxx_1_1feature_1_1polygon__t.html  classshpxx_1_1feature_1_1polygon__t.js  classshpxx_1_1incompatible__feature__type__error__t.html  classshpxx_1_1incompatible__feature__type__error__t__coll__graph.map  (+400 more)
.github/workflows/: build.yml  documentation.yml  format.yml  lint.yml
cmake/: AddCoverageTarget.cmake  DisableBuildTest.cmake  FindGTest.cmake  Findgcovr.cmake  Findshapelib.cmake  GetGitRevisionDescription.cmake  RemovePatternRecurse.cmake  ThirdPartyTargetLinkLibraries.cmake  VersionVariables.cmake
data/: common.pk  dbf.pk  linestring.dbf  linestring.shp  linestring.shx  multipoint-z.dbf  multipoint-z.shp  multipoint-z.shx  point-m.dbf  point-m.shp  point-m.shx  point-z.dbf  point-z.shp  point-z.shx  point.dbf  point.shp  point.shx  polygon.shp  polygon.shx  shapefile.pk  shp.pk  shx.pk
docs/: CMakeLists.txt
examples/: CMakeLists.txt
examples/shp2csv/: CMakeLists.txt  README.md  shp2csv.cpp
include/shpxx/: coordinate.hpp  coordinate_cast.hpp  coordinate_cast_impl.hpp  exceptions.hpp  shape_type.hpp  shp_handle.hpp  shpfile.hpp  shpfile_impl.hpp  version.hpp
include/shpxx/concepts/: has_class_name.hpp  has_compatibility_check.hpp  has_zm.hpp  is_coordinate.hpp  is_feature.hpp
include/shpxx/feature/: arc.hpp  linestring.hpp  multi_patch.hpp  multi_point.hpp  point.hpp  polygon.hpp  polyline_part.hpp
include/shpxx/geometry/: point.hpp
include/shpxx/io/: file.hpp  openmode.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_2.js  (+45 more)
src/: CMakeLists.txt  shape_type.cpp  shp_casts.hpp  shp_handle.cpp  shpfile.cpp  shplib_helpers.cpp  shplib_helpers.hpp  version.cpp  version.cpp.in
src/feature/: linestring.cpp  multi_point.cpp  point.cpp  polygon.cpp  polyline_part.cpp
src/io/: file.cpp  file_handler.cpp  file_handler.hpp  io_handler_concept.hpp  openmode_internal.cpp  openmode_internal.hpp  safile_wrapper.hpp
tests/: CMakeLists.txt  test_data.hpp  test_dummy.cpp  test_fileio.cpp  test_shpfile.cpp  test_version.cpp
tools/: check-clang-tidy.sh  download-test-data.sh
